--- a/vignettes/examples.Rmd
+++ b/vignettes/examples.Rmd
@@ -4,7 +4,7 @@ title: "Examples of Use"
 #date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Examples of Use}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
