--- a/vignettes/support.Rmd
+++ b/vignettes/support.Rmd
@@ -4,7 +4,7 @@ title: "Supports"
 #date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Supports}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
