--- a/vignettes/installation.Rmd
+++ b/vignettes/installation.Rmd
@@ -4,7 +4,7 @@ title: "Installation"
 #date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Installation}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
