--- a/vignettes/errors.Rmd
+++ b/vignettes/errors.Rmd
@@ -9,10 +9,11 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-## Potential Installation Errors
-If you have received those messages below from macOS or Windows, your device has not installed __JAGS__. Make sure you have installed [JAGS-4](http://www.sourceforge.net/projects/mcmc-jags/files) in your computer. The __asmcjr__ has a dependency on __rjags__ package which is just an interface to the JAGS library, and you need to install it to make them run with __rjags__ on your device.
+If you have received those messages below from macOS or Windows by various released versions of R, your device has not installed __JAGS__. Make sure you have installed [JAGS-4](http://www.sourceforge.net/projects/mcmc-jags/files) in your computer. The __asmcjr__ has a dependency on __rjags__ package which is just an interface to the JAGS library, and you need to install it to make them run with __rjags__ on your device.
 
-#### macOS (R: devel)
+## macOS-latest
+#### [_R_](https://cran.r-project.org/) devel
+
 ```
 * checking for file ‘.../DESCRIPTION’ ... OK
 * preparing ‘asmcjr’:
@@ -26,36 +27,48 @@ ERROR: dependency ‘rjags’ is not available for package ‘asmcjr’
 ERROR: package installation failed
 ```
 
-#### macOS (R: 4.0)
+#### [_R_](https://cran.r-project.org/) 4.0
 ```
-* checking for file ‘.../DESCRIPTION’ ... OK
-* preparing ‘asmcjr’:
-* checking DESCRIPTION meta-information ... OK
-* cleaning src
-* installing the package to process help pages
+** inst
+** byte-compile and prepare package for lazy loading
+##[error]Error: package or namespace load failed for ‘rjags’:
+ .onLoad failed in loadNamespace() for 'rjags', details:
+  call: dyn.load(file, DLLpath = DLLpath, ...)
+  error: unable to load shared object '/Users/runner/work/_temp/Library/rjags/libs/rjags.so':
+  dlopen(/Users/runner/work/_temp/Library/rjags/libs/rjags.so, 10): Library not loaded: /usr/local/lib/libjags.4.dylib
+  Referenced from: /Users/runner/work/_temp/Library/rjags/libs/rjags.so
+  Reason: image not found
+##[error]Error: package ‘rjags’ could not be loaded
+Execution halted
+ERROR: lazy loading failed for package ‘asmcjr’
+* removing ‘/private/var/folders/24/8k48jl6d249_n_qfxwsl6xvm0000gn/T/Rtmpsaj4IF/Rinst7f86903db99/asmcjr’
       -----------------------------------
-* installing *source* package ‘asmcjr’ ...
-** using staged installation
-** libs
-clang -mmacosx-version-min=10.13 -I"/Library/Frameworks/R.framework/Resources/include" -DNDEBUG   -I/usr/local/include   -fPIC  -Wall -g -O2  -c lbfgs_bu3.c -o lbfgs_bu3.o
-clang -mmacosx-version-min=10.13 -I"/Library/Frameworks/R.framework/Resources/include" -DNDEBUG   -I/usr/local/include   -fPIC  -Wall -g -O2  -c registerDynamicSymbol.c -o registerDynamicSymbol.o
-clang -mmacosx-version-min=10.13 -dynamiclib -Wl,-headerpad_max_install_names -undefined dynamic_lookup -single_module -multiply_defined suppress -L/Library/Frameworks/R.framework/Resources/lib -L/usr/local/lib -o asmcjr.so lbfgs_bu3.o registerDynamicSymbol.o -L/Library/Frameworks/R.framework/Resources/lib -lRlapack -L/Library/Frameworks/R.framework/Resources/lib -lRblas -L/usr/local/gfortran/lib/gcc/x86_64-apple-darwin18/8.2.0 -L/usr/local/gfortran/lib -lgfortran -lquadmath -lm -F/Library/Frameworks/R.framework/.. -framework R -Wl,-framework -Wl,CoreFoundation
-ld: warning: directory not found for option '-L/usr/local/gfortran/lib/gcc/x86_64-apple-darwin18/8.2.0'
-installing to /private/var/folders/24/8k48jl6d249_n_qfxwsl6xvm0000gn/T/Rtmp0nXqch/Rinstc9785a00e5/00LOCK-asmcjr/00new/asmcjr/libs
+ERROR: package installation failed
+##[error]Error in proc$get_built_file() : Build process failed
+Calls: <Anonymous> ... build_package -> with_envvar -> force -> <Anonymous>
+Execution halted
+##[error]Process completed with exit code 1.
+  Show testthat output
+```
+
+#### [_R_](https://cran.r-project.org/) 3.6
+```
 ** R
 ** data
 *** moving datasets to lazyload DB
 ** inst
 ** byte-compile and prepare package for lazy loading
-##[error]Error: .onLoad failed in loadNamespace() for 'rjags', details:
+##[error]Error: package or namespace load failed for ‘rjags’:
+ .onLoad failed in loadNamespace() for 'rjags', details:
   call: dyn.load(file, DLLpath = DLLpath, ...)
-  error: unable to load shared object '/Users/runner/runners/2.169.0/work/_temp/Library/rjags/libs/rjags.so':
-  dlopen(/Users/runner/runners/2.169.0/work/_temp/Library/rjags/libs/rjags.so, 10): Library not loaded: /usr/local/lib/libjags.4.dylib
-  Referenced from: /Users/runner/runners/2.169.0/work/_temp/Library/rjags/libs/rjags.so
+  error: unable to load shared object '/Users/runner/work/_temp/Library/rjags/libs/rjags.so':
+  dlopen(/Users/runner/work/_temp/Library/rjags/libs/rjags.so, 10): Library not loaded: /usr/local/lib/libjags.4.dylib
+  Referenced from: /Users/runner/work/_temp/Library/rjags/libs/rjags.so
   Reason: image not found
+##[error]Error: package ‘rjags’ could not be loaded
 Execution halted
 ERROR: lazy loading failed for package ‘asmcjr’
-* removing ‘/private/var/folders/24/8k48jl6d249_n_qfxwsl6xvm0000gn/T/Rtmp0nXqch/Rinstc9785a00e5/asmcjr’
+* removing ‘/private/var/folders/24/8k48jl6d249_n_qfxwsl6xvm0000gn/T/RtmpoLWKaB/Rinst9f5249783d5/asmcjr’
       -----------------------------------
 ERROR: package installation failed
 ##[error]Error in proc$get_built_file() : Build process failed
@@ -64,7 +77,80 @@ Execution halted
 ##[error]Process completed with exit code 1.
 ```
 
-#### Windows (R: 4.0)
+#### [_R_](https://cran.r-project.org/) 3.5
+```
+* checking for file ‘.../DESCRIPTION’ ... OK
+* preparing ‘asmcjr’:
+* checking DESCRIPTION meta-information ... OK
+* cleaning src
+* installing the package to process help pages
+      -----------------------------------
+ERROR: dependencies ‘MCMCpack’, ‘smacof’ are not available for package ‘asmcjr’
+* removing ‘/private/var/folders/24/8k48jl6d249_n_qfxwsl6xvm0000gn/T/RtmpAPITfM/Rinst252755cb64e3/asmcjr’
+      -----------------------------------
+ERROR: package installation failed
+##[error]Error in proc$get_built_file() : Build process failed
+Calls: <Anonymous> ... build_package -> with_envvar -> force -> <Anonymous>
+Execution halted
+##[error]Process completed with exit code 1.
+```
+
+#### [_R_](https://cran.r-project.org/) 3.4
+
+```
+
+* installing *source* package 'asmcjr' ...
+
+** using staged installation
+
+** libs
+
+"c:/rtools40/mingw64/bin/"gcc  -I"C:/R/include" -DNDEBUG          -O2 -Wall  -std=gnu99 -mfpmath=sse -msse2 -mstackrealign  -c lbfgs_bu3.c -o lbfgs_bu3.o
+
+"c:/rtools40/mingw64/bin/"gcc  -I"C:/R/include" -DNDEBUG          -O2 -Wall  -std=gnu99 -mfpmath=sse -msse2 -mstackrealign  -c registerDynamicSymbol.c -o registerDynamicSymbol.o
+
+c:/rtools40/mingw64/bin/gcc -shared -s -static-libgcc -o asmcjr.dll tmp.def lbfgs_bu3.o registerDynamicSymbol.o -LC:/R/bin/x64 -lRlapack -LC:/R/bin/x64 -lRblas -lgfortran -lm -lquadmath -LC:/R/bin/x64 -lR
+
+installing to C:/Users/RUNNER~1/AppData/Local/Temp/RtmpiAXdl6/Rinstab02f562d08/00LOCK-asmcjr/00new/asmcjr/libs/x64
+
+** R
+
+** data
+
+*** moving datasets to lazyload DB
+
+** inst
+
+** byte-compile and prepare package for lazy loading
+
+
+Make sure you have installed JAGS-4.x.y.exe (for any x >=0, y>=0) from
+
+http://www.sourceforge.net/projects/mcmc-jags/files
+
+
+
+##[error]Error: package 'rjags' could not be loaded
+
+Execution halted
+
+ERROR: lazy loading failed for package 'asmcjr'
+
+* removing 'C:/Users/RUNNER~1/AppData/Local/Temp/RtmpiAXdl6/Rinstab02f562d08/asmcjr'
+
+      -----------------------------------
+
+ERROR: package installation failed
+
+##[error]Error in proc$get_built_file() : Build process failed
+Calls: <Anonymous> ... build_package -> with_envvar -> force -> <Anonymous>
+Execution halted
+##[error]Process completed with exit code 1.
+
+```
+
+## Windows-latest 
+#### [_R_](https://cran.r-project.org/) 4.0
 ```
 * checking for file 'D:\a\asmcjr\asmcjr/DESCRIPTION' ... OK
 
