--- a/vignettes/support.Rmd
+++ b/vignettes/support.Rmd
@@ -8,9 +8,7 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
-```{r include=FALSE}
-options(rmarkdown.html_vignette.check_title = FALSE)
-```
-
 
 For more learning resources and those who want to learn how to use computational methods to understand the latent properties of your data, please join the course [Scaling Methods for Social Science](https://essexsummerschool.com/summer-school-facts/courses/2020-course-list/3l-ideal-point-estimation-item-response-theory-and-scaling-methods/) at 2020 [ESSEX SUMMER SCHOOL](https://essexsummerschool.com/).
+
+ <img src="man/figures/logo.png" width="140" align="center" /> <br /> 
