--- a/vignettes/support.Rmd
+++ b/vignettes/support.Rmd
@@ -11,4 +11,4 @@ vignette: >
 
 For more learning resources and those who want to learn how to use computational methods to understand the latent properties of your data, please join the course [Scaling Methods for Social Science](https://essexsummerschool.com/summer-school-facts/courses/2020-course-list/3l-ideal-point-estimation-item-response-theory-and-scaling-methods/) at 2020 [ESSEX SUMMER SCHOOL](https://essexsummerschool.com/).
 
- <img src="man/figures/logo.png" width="140" align="center" /> <br /> 
+ <img src="man/figures/esslogo.png" width="140" align="center" /> <br /> 
