--- a/vignettes/support.Rmd
+++ b/vignettes/support.Rmd
@@ -9,6 +9,4 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-For more learning resources and those who want to learn how to use computational methods to understand the latent properties of your data, please join the course [Scaling Methods for Social Science](https://essexsummerschool.com/summer-school-facts/courses/2020-course-list/3l-ideal-point-estimation-item-response-theory-and-scaling-methods/) at 2020 [ESSEX SUMMER SCHOOL](https://essexsummerschool.com/).
-
- <img src="https://raw.githack.com/yl17124/asmcjr/master/vignettes/esslogo.png" width="140" align="center" /> <br /> 
+#### For more learning resources and those who want to learn how to use computational methods to understand the latent properties of your data, please join the course [Scaling Methods for Social Science](https://essexsummerschool.com/summer-school-facts/courses/2020-course-list/3l-ideal-point-estimation-item-response-theory-and-scaling-methods/) at 2020 [ESSEX SUMMER SCHOOL](https://essexsummerschool.com/). <img src="https://raw.githack.com/yl17124/asmcjr/master/vignettes/esslogo.png" width="140" align="center" /> <br /> 
